Bug 435787 - "rrow" doesn't find playback arrow buttons in Emoji selector, but "arrow" does
Summary: "rrow" doesn't find playback arrow buttons in Emoji selector, but "arrow" does
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Emoji Selector (other bugs)
Version First Reported In: 5.93.0
Platform: Other Linux
: NOR normal
Target Milestone: 1.0
Assignee: Faisal Mujawar
URL:
Keywords: junior-jobs, usability
Depends on:
Blocks:
 
Reported: 2021-04-15 21:42 UTC by Dan Dascalescu
Modified: 2024-11-02 10:34 UTC (History)
6 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.2.3
Sentry Crash Report:


Attachments
Screencast (148.62 KB, video/webm)
2021-04-15 21:42 UTC, Dan Dascalescu
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Dan Dascalescu 2021-04-15 21:42:21 UTC
Created attachment 137644 [details]
Screencast

Searching for "rrow" finds blue arrows, but not the playback arrow emojis.

Typing "arrow" does find the playback ones as well.
Comment 1 Nate Graham 2021-04-16 18:17:03 UTC
Wow that's weird. Can confirm.
Comment 2 Bharadwaj Raju 2022-09-30 10:24:31 UTC
Right now they don't come up even with "arrow", and "arrow" doesn't seem to be mentioned in their description.
Comment 3 fanzhuyifan 2024-02-17 18:38:27 UTC
Currently the annotations are stored as a StringList, and we just do idx.data(AbstractEmojiModel::AnnotationsRole).toStringList().contains(m_search, Qt::CaseInsensitive);

(See plasma-desktop/emojier/emojierplugin.cpp)
Comment 4 Faisal Mujawar 2024-02-24 16:28:48 UTC
Hi! Can I work on this bug?
Comment 5 fanzhuyifan 2024-02-24 16:42:49 UTC
Definitely. Feel free to ask in the matrix channels if you ever need help https://community.kde.org/Matrix
Comment 6 Bug Janitor Service 2024-10-28 22:32:40 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-desktop/-/merge_requests/2605
Comment 7 Fushan Wen 2024-10-29 02:56:28 UTC
Git commit 823b252ec107c2a73e831ee37d435ed83281b4cc by Fushan Wen, on behalf of Eren Karakas.
Committed on 29/10/2024 at 02:56.
Pushed by fusionfuture into branch 'master'.

emojier: do substring search in emoji annotations as well

.contains behaves differently on emoji.descriptions and emoji.annotations
since one is QString and one is QStringList. Use .filter to get the same
substring check behavior.

M  +1    -1    emojier/emojierplugin.cpp

https://invent.kde.org/plasma/plasma-desktop/-/commit/823b252ec107c2a73e831ee37d435ed83281b4cc
Comment 8 Fushan Wen 2024-10-29 03:15:32 UTC
Git commit 49abd66b12bbc4111d5e32bdef07b3c96c46698d by Fushan Wen.
Committed on 29/10/2024 at 03:15.
Pushed by fusionfuture into branch 'Plasma/6.2'.

emojier: do substring search in emoji annotations as well

.contains behaves differently on emoji.descriptions and emoji.annotations
since one is QString and one is QStringList. Use .filter to get the same
substring check behavior.


(cherry picked from commit 823b252ec107c2a73e831ee37d435ed83281b4cc)

Co-authored-by: Eren Karakas <erenkarakas202@hotmail.com>

M  +1    -1    emojier/emojierplugin.cpp

https://invent.kde.org/plasma/plasma-desktop/-/commit/49abd66b12bbc4111d5e32bdef07b3c96c46698d