emojier: do substring search in emoji annotations as well

.contains behaves differently on emoji.descriptions and emoji.annotations
since one is QString and one is QStringList. Use .filter to get the same
substring check behavior.

BUG: 435787